--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,7 @@ AllCops:
     - "db/**/*"
     - "config/**/*"
     - "script/**/*"
+    - "spec/**/*"
     - !ruby/regexp /old_and_unused\.rb$/
 
 # 日本語でのコメントを許可
