--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,7 +17,10 @@ AllCops:
     - "config/**/*"
     - "script/**/*"
     - "spec/**/*"
+    - vendor/**/*
     - !ruby/regexp /old_and_unused\.rb$/
+    - app/helpers/devise_helper.rb
+    - app/controllers/admins/sales_records_controller.rb
 
 # 日本語でのコメントを許可
 AsciiComments:
@@ -33,4 +36,8 @@ ClassAndModuleChildren:
 
 # 文字リテラルのイミュータブル宣言を無視（freezeになるのはRuby3以降）
 Style/FrozenStringLiteralComment:
+  Enabled: false
+
+# "Line is too long"を無効
+Metrics/LineLength:
   Enabled: false
